[package]
name = "NowPlayingV2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
base64 = "0.13.1"
local-ip-address = "0.4.9"
pkce = "0.1.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
